Fix Seperator Spacing on Overview Page and utilize commas for US/EN
(cherry-picked from 71d1bcfb931be9250829d9750b9057826a703620)

--- a/src/qt/res/css/default.css
+++ b/src/qt/res/css/default.css
@@ -1915,7 +1915,11 @@ QGroupBox::title {
 }
 
 #labelBalancez, #labelTotalz {
-    font-size:40px;
+    font-size:36px;
+}
+
+#labelTotalz span {
+    color:red;
 }
 
 #labelTotalz {
@@ -1925,7 +1929,7 @@ QGroupBox::title {
 
 #labelBalance, #labelUnconfirmed, #labelImmature, #labelLockedBalance, #labelTotal, #labelzBalanceMature, #labelzBalance{
     font-size:22px;
-
+    font-weight:100;
 }
 
 .negative-sum {
